# temporal-rest-executor

./: .gitignore  1.py  404.html  Dockerfile  README.md  index.html  manifest.example.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml  documentation-deployment.yml
docs/: how-it-works.md  index.md  usage.md
how-it-works/: index.html
src/: env.py  main.py  router.py  run.py  schemas.py  temporal.py
src/executor/: common.py  endpoints.py  env.py  main.py  router.py  schemas.py  telemetry.py  temporal.py
src/misc/: router.py
src/presets/: __init__.py  config.py
src/tests/: conftest.py  misc_test.py  neg_temporal_endpoint_test.py  presets_test.py  start_test_worker.py  temporal_a_execution_test.py  temporal_endpoint_test.py  temporal_w_execution_test.py  worker.py
src/tests/manifests/: manifest.positive.yaml  manifest.urlduplication.yaml
tests/: base_test.py  conftest.py  worker.py
usage/: index.html
